tests/coverage/misc/fail/negative/regex_literals/006_trailing_backslash.js
// Expected error: malformed character class.
const r = /[a\\n/
